Add crawler names to log messages